# sap-doc-app

./: .dockerignore  .gitignore  ADK_CORS_SETUP.md  ADK_SERVICE_READY.md  ADK_TROUBLESHOOTING.md  APPOINTMENTS_LIST_FEATURE.md  CONNECTION_GUIDE.md  CORS_CONFIGURATION.md  DOCKER.md  DYNAMIC_TIME_SLOTS.md  Dockerfile  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml
adk-service/: .env.example  Dockerfile  README.md  README_REAL_ADK.md  __init__.py  agent.py  config.py  init_db.py  prompts.py  proxy.py  pyproject.toml  requirements.txt  server.py  server.py.backup  start_adk.sh
adk-service/sap-doc-app/: agent.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  package.json  pnpm-lock.yaml
backend/src/: server.js
backend/src/database/: db.js  migrate.js
backend/src/routes/: appointments.js
src/: App.tsx  index.css
src/components/ui/: booking-modal.tsx  header.tsx  schedule-grid.tsx  simple-header.tsx  stats-card.tsx  time-slot.tsx
src/data/: mockData.ts
src/hooks/: useAppointments.ts
src/pages/: ADKQueryPage.tsx  AppointmentsListPage.tsx  SchedulePage.tsx
src/services/: appointmentService.ts
src/types/: appointment.ts
src/utils/: dateUtils.ts
